[gd_scene load_steps=6 format=2]

[ext_resource path="res://Level/LevelWallTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Level/LevelBackgroundTileset.tres" type="TileSet" id=2]
[ext_resource path="res://World/Level.gd" type="Script" id=3]
[ext_resource path="res://Helpers/Camera/CameraPolygon.tscn" type="PackedScene" id=5]

[sub_resource type="Curve" id=17]
_data = [ Vector2( 0.235849, 0 ), 0.0, 0.0481818, 0, 0, Vector2( 0.542453, 0.509091 ), 4.66603, 4.66603, 0, 0, Vector2( 0.768868, 0.972727 ), -2.45289, -2.45289, 0, 0, Vector2( 0.891509, 1 ), 3.55024, 0.0, 0, 0 ]

[node name="Level" type="TileMap"]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -786445, 3, 0, -786444, 3, 1, -786443, 3, 1, -786442, 3, 1, -786441, 3, 1, -786440, 3, 1, -786439, 3, 1, -786438, 3, 1, -786437, 3, 1, -786436, 3, 1, -786435, 3, 1, -786434, 3, 1, -786433, 3, 1, -851968, 3, 1, -851967, 3, 1, -851966, 3, 1, -851965, 3, 1, -851964, 3, 1, -851963, 3, 1, -851962, 3, 1, -851961, 3, 1, -851960, 3, 1, -851959, 3, 1, -851958, 3, 1, -851957, 3, 1, -851956, 3, 2, -720909, 3, 65536, -720908, 3, 3, -720907, 3, 131073, -720906, 3, 131073, -720905, 3, 131073, -720904, 3, 131073, -720903, 3, 131073, -720902, 3, 131073, -720901, 3, 131073, -720900, 3, 131073, -720899, 3, 131073, -720898, 3, 131073, -720897, 3, 131073, -786432, 3, 131073, -786431, 3, 131073, -786430, 3, 131073, -786429, 3, 131073, -786428, 3, 131073, -786427, 3, 131073, -786426, 3, 131073, -786425, 3, 131073, -786424, 3, 131073, -786423, 3, 131073, -786422, 3, 131073, -786421, 3, 4, -786420, 3, 65538, -655373, 3, 65536, -655372, 3, 65538, -720885, 3, 65536, -720884, 3, 65538, -589837, 3, 65536, -589836, 3, 65538, -655349, 3, 65536, -655348, 3, 65538, -524301, 3, 65536, -524300, 3, 65538, -589813, 3, 65536, -589812, 3, 65538, -458765, 3, 65536, -458764, 3, 65538, -524277, 3, 65536, -524276, 3, 65538, -393229, 3, 65536, -393228, 3, 65538, -458741, 3, 65536, -458740, 3, 65538, -327693, 3, 65536, -327692, 3, 65538, -393205, 3, 65536, -393204, 3, 65538, -262157, 3, 65536, -262156, 3, 65538, -327669, 3, 65536, -327668, 3, 65538, -196621, 3, 65536, -196620, 3, 65538, -262133, 3, 65536, -262132, 3, 65538, -131085, 3, 65536, -131084, 3, 65538, -196597, 3, 65536, -196596, 3, 65538, -65549, 3, 65536, -65548, 3, 65538, -131061, 3, 65536, -131060, 3, 65538, -13, 3, 65536, -12, 3, 65538, -65525, 3, 65536, -65524, 3, 65538, 65523, 3, 65536, 65524, 3, 65538, 11, 3, 65536, 12, 3, 65538, 131059, 3, 65536, 131060, 3, 65538, 65547, 3, 65536, 65548, 3, 65538, 196595, 3, 65536, 196596, 3, 65538, 131083, 3, 65536, 131084, 3, 65538, 262131, 3, 65536, 262132, 3, 65538, 196619, 3, 65536, 196620, 3, 65538, 327667, 3, 65536, 327668, 3, 65538, 262155, 3, 65536, 262156, 3, 65538, 393203, 3, 65536, 393204, 3, 65538, 327691, 3, 65536, 327692, 3, 65538, 458739, 3, 65536, 458740, 3, 65538, 393227, 3, 65536, 393228, 3, 65538, 524275, 3, 65536, 524276, 3, 65538, 458763, 3, 65536, 458764, 3, 65538, 589811, 3, 65536, 589812, 3, 65538, 524299, 3, 65536, 524300, 3, 65538, 655347, 3, 65536, 655348, 3, 65538, 589835, 3, 65536, 589836, 3, 65538, 720883, 3, 65536, 720884, 3, 65538, 655371, 3, 65536, 655372, 3, 65538, 786419, 3, 65536, 786420, 3, 65539, 786421, 3, 1, 786422, 3, 1, 786423, 3, 1, 786424, 3, 1, 786425, 3, 1, 786426, 3, 1, 786427, 3, 1, 786428, 3, 1, 786429, 3, 1, 786430, 3, 1, 786431, 3, 1, 720896, 3, 1, 720897, 3, 1, 720898, 3, 1, 720899, 3, 1, 720900, 3, 1, 720901, 3, 1, 720902, 3, 1, 720903, 3, 1, 720904, 3, 1, 720905, 3, 1, 720906, 3, 1, 720907, 3, 65540, 720908, 3, 65538, 851955, 3, 131072, 851956, 3, 131073, 851957, 3, 131073, 851958, 3, 131073, 851959, 3, 131073, 851960, 3, 131073, 851961, 3, 131073, 851962, 3, 131073, 851963, 3, 131073, 851964, 3, 131073, 851965, 3, 131073, 851966, 3, 131073, 851967, 3, 131073, 786432, 3, 131073, 786433, 3, 131073, 786434, 3, 131073, 786435, 3, 131073, 786436, 3, 131073, 786437, 3, 131073, 786438, 3, 131073, 786439, 3, 131073, 786440, 3, 131073, 786441, 3, 131073, 786442, 3, 131073, 786443, 3, 131073, 786444, 3, 131074 )
script = ExtResource( 3 )
rotationCurve = SubResource( 17 )
rotateCooldown = 4.5

[node name="CameraPolygon" parent="." instance=ExtResource( 5 )]
polygon = PoolVector2Array( -116, -116, -116, 116, 116, 116, 116, -116 )

[node name="Timers" type="Node" parent="."]

[node name="RotateCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="RotateTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="SoundTimer" type="Timer" parent="Timers"]
wait_time = 0.05
one_shot = true

[node name="Background" type="TileMap" parent="."]
show_behind_parent = true
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[connection signal="timeout" from="Timers/RotateCooldown" to="." method="_on_RotateCooldown_timeout"]
[connection signal="timeout" from="Timers/RotateTimer" to="." method="_on_RotateTimer_timeout"]
